feat: member 로그아웃 기능구현

--- a/server/src/main/resources/templates/joinForm.html
+++ b/server/src/main/resources/templates/joinForm.html
@@ -7,7 +7,7 @@
 <body>
 <h1>회원가입 페이지</h1>
 <hr />
-<form action="/join" method="post">
+<form action="/user/join" method="post">
   <input type="text" name="username" placeholder="Username" /><br />
   <input type="password" name="password" placeholder="Password" /><br />
   <input type="text" name="email" placeholder="Email" /><br />
