--- a/server/src/main/resources/templates/loginForm.html
+++ b/server/src/main/resources/templates/loginForm.html
@@ -7,7 +7,7 @@
 <body>
 <h1>로그인 페이지</h1>
 <hr />
-<form action="/login" method="post">
+<form action="/user/login" method="post">
     <input type="text" name="username" placeholder="Username" /><br />
     <input type="password" name="password" placeholder="Password" /><br />
     <button>로그인</button>
