--- a/client/src/App.css
+++ b/client/src/App.css
@@ -130,3 +130,20 @@ table {
 * {
   box-sizing: border-box;
 }
+
+/* 웹 폰트 적용 */
+@import url('https://fonts.googleapis.com/css2?family=Margarine&family=Noto+Sans+KR:wght@400;500;700&display=swap');
+
+/* font-family: 'Margarine', cursive;
+font-family: 'Noto Sans KR', sans-serif; */
+
+h2 {
+  font-family: 'Margarine', cursive;
+  font-size: 30px;
+  color: var(--point-color);
+}
+
+* {
+  font-family: 'Noto Sans KR', sans-serif;
+  font-size: 1rem;
+}
